# boss-rush-2025-jam

./: CHANGELOG.md  Cargo.toml  LICENSE-CC.md  README.md  index.html  rust-toolchain.toml  rustfmt.toml
.github/workflows/: gh-pages.yaml  release-please.yaml  release.yaml
assets/: boss-rush-2025-jam.d.ts  boss-rush-2025-jam.js  boss-rush-2025-jam_bg.wasm.d.ts
src/: assets.rs  dev.rs  main.rs  prelude.rs  settings.rs  state.rs  utils.rs
src/dev_tools/: mod.rs
src/game/: controller.rs  mod.rs  pause.rs  ui.rs
src/game/element/: mod.rs
src/game/enemy/: mod.rs
src/game/player/: mod.rs
src/game_over/: mod.rs
src/loading/: mod.rs
src/main_menu/: mod.rs  settings.rs
www/: index.html
