[package]
name = "boss-rush-2025-jam"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
bevy-inspector-egui = "0.28.1"
enum-iterator = "2.1.0"
iyes_progress = { version = "0.13.1", features = ["assets"] }

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools"]
web-dev = ["bevy/bevy_dev_tools"]
web = []

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
